Fixes bug #13377. Added code to close active log files in case of log reset condition.